# libd20

./: .gitignore  CMakeLists.txt  build.sh  readme.md
include/: d20lib.h  libd20.h
include/character/: character.h
include/character/classes/: class.h  class_base.h  class_hasher.h  fighter.h
include/character/items/: hand_item.h  item.h
include/character/items/shields/: large_shield.h  shield.h
include/character/items/weapons/: long_sword.h  weapon.h
include/character/races/: human.h  race.h
include/character/races/sizes/: colossal.h  diminutive.h  fine.h  gargantuan.h  huge.h  large.h  medium.h  size.h  small.h  tiny.h
include/items/: hand_item.h  item.h
include/items/shields/: large_shield.h  shield.h
include/items/weapons/: long_sword.h  weapon.h
include/items/weapons/melee/: long_sword.h  melee_weapon.h
include/items/weapons/ranged/: long_bow.h  ranged_weapon.h
src/: libd20.cpp
src/character/: character.cpp
src/character/classes/: class.cpp  class_base.cpp  fighter.cpp
src/character/items/: hand_item.cpp  item.cpp
src/character/items/shields/: large_shield.cpp  shield.cpp
src/character/items/weapons/: long_sword.cpp  weapon.cpp
src/character/races/: human.cpp  race.cpp
src/character/races/sizes/: colossal.cpp  diminutive.cpp  fine.cpp  gargantuan.cpp  huge.cpp  large.cpp  medium.cpp  size.cpp  small.cpp  tiny.cpp
src/items/: hand_item.cpp  item.cpp
src/items/shields/: large_shield.cpp  shield.cpp
src/items/weapons/: long_sword.cpp  weapon.cpp
src/items/weapons/melee/: long_sword.cpp  melee_weapon.cpp
src/items/weapons/ranged/: long_bow.cpp  ranged_weapon.cpp
tests/: CMakeLists.txt  test_character.cpp  test_helper.h
tests/character/: CMakeLists.txt  test_ab.cpp  test_ab_ranged.cpp  test_character.cpp  test_equip_weapon.cpp  test_equip_weapon_and_shield.cpp
tests/items/: CMakeLists.txt  test_item_name.cpp  test_item_ranged.cpp  test_item_volume.cpp  test_item_weight.cpp
tests/test_include/: test_helper.h
